Added website; removed courses; reorganized independent

--- a/cv.tex
+++ b/cv.tex
@@ -109,7 +109,7 @@
 
 {
     \begin{tabular}{rp{5cm}l}
-        \multirow{3}{0.55\linewidth}{
+        \multirow{3}{0.50\linewidth}{
             {
                 \addfontfeature{LetterSpace=20.0}\fontsize{20}{20}\selectfont\scshape
                 Srijan R. Shetty
@@ -119,7 +119,8 @@
 
         & {\Large\Letter} \footnotesize {\href{mailto:srijan.shetty@gmail.com}{srijan.shetty@gmail.com}}
         & {\Large\Mobilefone} \footnotesize {+(91) 9005900383}\\
-        & {\github} \footnotesize {\href{https://github.com/srijanshetty}{https://github.com/srijanshetty}}\\
+        & {\github} \footnotesize {\href{https://github.com/srijanshetty}{https://github.com/srijanshetty}}
+        & {\Large\Mundus} \footnotesize{\href{https://srijanshetty.in}{https://srijanshetty.in}}\\
     \end{tabular}
     \vspace{-0.5cm}
     \section{}
@@ -176,17 +177,17 @@
 %----------------------------------------------------------------------------------------
 %   RELEVANT COURSES
 %----------------------------------------------------------------------------------------
-\highlight
-    {Courses}
-    {\small
-        \begin{tabular}{p{16.5cm}}
-                Operating Systems, Computer and Internet Security, Networks,
-                Compilers, Principles of Programming Languages, Computer Organization,
-                Computing Lab I \& II, Algorithms I \& II\\
-
-        \end{tabular}
-    }
-
+% \highlight
+%     {Courses}
+%     {\small
+%         \begin{tabular}{p{16.5cm}}
+%                 Operating Systems, Computer and Internet Security, Networks,
+%                 Compilers, Principles of Programming Languages, Computer Organization,
+%                 Computing Lab I \& II, Algorithms I \& II\\
+%
+%         \end{tabular}
+%     }
+%
 %----------------------------------------------------------------------------------------
 %   WORK EXPERIENCE
 %----------------------------------------------------------------------------------------
@@ -269,8 +270,8 @@
      \begin{itemize}[leftmargin=0.5cm]
          \item Presented a poster on Opinion Word Expansion and Target Extraction through Double Propogation, Guang Qin,
              Bing Liu, Jiajun Bu, Chun Chen that was nominated as the best poster by all students.
-         % \item Generated a Hindi literature corpus consisting of works by Tagore,
-             % Vibhuti Narayan, Premchand, Sarat Chattopadhyay and Dhamarvir Bharati.
+         \item Generated a Hindi literature corpus consisting of works by Tagore,
+             Vibhuti Narayan, Premchand, Sarat Chattopadhyay and Dhamarvir Bharati.
          \item Clustered a sample set of multiple Hindi authors using K-means unsupervised clustering to achieve
              F-scores in the range of 90-97\% for each author.
          \item Classified each author using Support Vector Machine using Radial Basis Kernel function
@@ -397,32 +398,33 @@
      }
 
 \projectlist
-    {Projects on Github}
+    {Web Development}
     {
         \begin{tabular}{p{2cm}l}
-            \textbf{DS}: & implementation of certain algorithms and data structures
-             \href{https://github.com/srijanshetty/DS} {https://github.com/srijanshetty/DS}\\
-             \textbf{Notes}: & notes on computing and social sciences.
-             \href{https://github.com/srijanshetty/notes} {https://github.com/srijanshetty/notes}\\
-             \textbf{Dotfiles}: & an opinionated work flow on Linux Systems.
-             \href{https://github.com/srijanshetty/dotfiles} {https://github.com/srijanshetty/dotfiles}\\
-             \textbf{Bash Scripts}: & handy configurations and shortcuts for ZSH
-             \href{https://github.com/srijanshetty/custom} {https://github.com/srijanshetty/custom}\\
+             \textbf{Antaragni '14}: & The annual cultural festival of IIT Kanpur.
+             \href{http://ali.srijanshetty.in} {http://ali.srijanshetty.in}\\
+             \textbf{Junoon '14}: & Eastern Band Competition, Antaragni '14.
+             \href{http://junoon.srijanshetty.in}{http://junoon.srijanshetty.in}\\
+            \textbf{Udghosh '13}: & The annual sports-fest of IIT Kanpur.
+             \href{http://udghosh.srijanshetty.in}{http://udghosh.srijanshetty.in}\\
          \end{tabular}
     }
 
 \projectlist
-    {Web Development}
+    {Projects on Github}
     {
         \begin{tabular}{p{2cm}l}
-            \textbf{Udghosh '13}: & The annual sports-fest of IIT Kanpur.
-             \href{http://udghosh.srijanshetty.in}{http://udghosh.srijanshetty.in}\\
-             \textbf{ALI '14}: & Antaragni Leadership Initiative.
-             \href{http://ali.srijanshetty.in} {http://ali.srijanshetty.in}\\
-             \textbf{Junoon '14}: & Eastern Band Competition, Antaragni '14.
-             \href{http://junoon.srijanshetty.in}{http://junoon.srijanshetty.in}\\
+             \textbf{Bash Scripts}: & handy configurations and shortcuts for ZSH
+             \href{https://github.com/srijanshetty/custom} {https://github.com/srijanshetty/custom}\\
+             \textbf{Dotfiles}: & an opinionated work flow on Linux Systems.
+             \href{https://github.com/srijanshetty/dotfiles} {https://github.com/srijanshetty/dotfiles}\\
+             \textbf{Notes}: & notes on computing and social sciences.
+             \href{https://github.com/srijanshetty/notes} {https://github.com/srijanshetty/notes}\\
+             \textbf{DS}: & implementation of certain algorithms and data structures
+             \href{https://github.com/srijanshetty/DS} {https://github.com/srijanshetty/DS}\\
          \end{tabular}
     }
+
 
 %----------------------------------------------------------------------------------------
 %   SCHOLASTIC ACHIEVEMENTS
