--- a/cv.tex
+++ b/cv.tex
@@ -1,3 +1,24 @@
+% -
+ %   Copyright (c) 2014 Srijan R Shetty <srijan.shetty+code@gmail.com>
+ %
+ %   Permission is hereby granted, free of charge, to any person obtaining a copy of
+ %   this software and associated documentation files (the "Software"), to deal in
+ %   the Software without restriction, including without limitation the rights to
+ %   use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
+ %   the Software, and to permit persons to whom the Software is furnished to do so,
+ %   subject to the following conditions:
+ %
+ %   The above copyright notice and this permission notice shall be included in all
+ %   copies or substantial portions of the Software.
+ %
+ %   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ %   IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
+ %   FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
+ %   COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
+ %   IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
+ %   CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+ %%
+
 \documentclass[a4paper]{article} % Default font size and paper size
 
 %----------------------------------------------------------------------------------------
@@ -500,14 +521,17 @@
         \end{itemize}
     }
 
-\skill {2013 -- 2014}
-       {Member, Gymkhana Review Committee}
+\skill
+    {2013 -- 2014}
+    {Member, Gymkhana Review Committee}
 
-\skill {2013 -- 2014}
-       {Editor-in-chief, Vox Populi, the campus newsletter.}
+\skill
+    {2013 -- 2014}
+    {Editor-in-chief, Vox Populi, the campus newsletter.}
 
-\skill {2012 -- 2013}
-       {Senator, Students' Senate, IITK Y11 batch.}
+\skill
+    {2012 -- 2013}
+    {Senator, Students' Senate, IITK Y11 batch.}
 
 %----------------------------------------------------------------------------------------
 %   COMMUNITY SERVICE
@@ -528,18 +552,20 @@
         \end{itemize}
     }
 
-\cproject {2013 -- 2014}
-          {Tutor, English Proficiency Programme}
-          {Professor Bhaskar Das Gupta}
-          {}
-          {
-               \begin{itemize}[leftmargin=0.5cm]
-                   \item Worked as a \textbf{English tutor} in the pilot English Proficiency Programme to help
-                       \textbf{under-privileged students} obtain a functional knowlege of English.
-               \end{itemize}
-          }
+\cproject
+    {2013 -- 2014}
+    {Tutor, English Proficiency Programme}
+    {Professor Bhaskar Das Gupta}
+    {}
+    {
+       \begin{itemize}[leftmargin=0.5cm]
+           \item Worked as a \textbf{English tutor} in the pilot English Proficiency Programme to help
+               \textbf{under-privileged students} obtain a functional knowlege of English.
+       \end{itemize}
+    }
 
-\skill {2012 -- 2013}
-       {Academic Mentor, Fundamentals of Computing, Professor Sumit Ganguly}
+\skill
+    {2012 -- 2013}
+    {Academic Mentor, Fundamentals of Computing, Professor Sumit Ganguly}
 
 \end{document}
