Head Logistics, EC

--- a/cv.tex
+++ b/cv.tex
@@ -484,6 +484,18 @@
     }
 
 \gitproject
+    {\href{https://github.com/srijanshetty/elections} {\footnotesize{[https://github.com/elections]}}}
+    {Head Logistics, Election Council, IIT Kanpur}
+    {
+        \begin{itemize}[leftmargin=0.5cm]
+            \item Designed and created a new electronic voting system in consultation with the \textbf{Students' Senate}
+                to facilitate smooth voting in General Elections 2015.
+            \item Ensured full transparency in handling the finances of Election Council, IIT Kanpur and devised new methods
+                to reduce the overall expenditure of the Council by $25\%$.
+        \end{itemize}
+    }
+
+\gitproject
     {2014}
     {Head, Major Events and Competitions, Antaragni '14}
     {
