--- a/cv.tex
+++ b/cv.tex
@@ -223,7 +223,7 @@
 \cproject
     {2014 - 2015}
     {Multi Factor Authentication in OpenVPN}
-    {\textsc{\raggedright Mozilla Winter of Security}, Guillaume Destuynder and Professor Dheeraj Sanghi}
+    {\textsc{\raggedright Mozilla Winter of Security}, Guillaume Destuynder, Professor Dheeraj Sanghi}
     {\href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {[Wiki]} }
     {
       \begin{itemize}[leftmargin=0.5cm]
@@ -393,58 +393,59 @@
     {Summer 2012-2013}
     {GNU/Linux Exploration}
     {Programming Club, IIT Kanpur}
-    {\href{http://bit.ly/pclubLinux}{\footnotesize{[http://bit.ly/pclubLinux]}}}
+    {\href{http://bit.ly/pclubLinux}{\small{[http://bit.ly/pclubLinux]}}}
     {
-        Explored and documented the various facets of \textbf{GNU/Linux} like the file system,
-        process management, memory management, shell interface etc to serve as a reference for the
-        Student Community.
-    }
-\vspace{3mm}
-
-\projectlist
-    {Applications}
-    {
-        \begin{tabular}{p{2cm}p{0.67\linewidth}}
-            \textbf{ShuffleRun}:
-            & Pitched ShuffleRun, a \textbf{music player} which selects tracks on the basis of the user's
-            running speed; recieved honourable mention at \textbf{Yahoo! HackU 2013}.
-            \href{https://github.com/srijanshetty/ShuffleRun} {https://github.com/srijanshetty/ShuffleRun]}\\
-
-            \textbf{GYPH}:
-            & Eased the process of creating minimalistic websites for not-so-tech-savvy students
-            by creating a WYSIWG website \textbf{editor.} \href{http://gyph2.herokuapp.com/template1}
-            {http://gyph2.herokuapp.com/template1}\\
-
-            \textbf{OARS}:
-            & \textbf{Scraped} the institute \textbf{academic records} to create a database of all courses offered by the
-            institute to create an AngularJS based \textbf{course search} over the existing legacy course search.
-            {\href{https://navya.github.io/oars}{\footnotesize{[https://navya.github.io/oars]}}}
-         \end{tabular}
-     }
-
-\projectlist
-    {Web Development}
-    {
-        \begin{tabular}{p{2cm}p{0.67\linewidth}}
-             \textbf{Antaragni '14}: & The annual cultural festival of IIT Kanpur.
-             \href{http://antaragni.srijanshetty.in} {http://antaragni.srijanshetty.in}\\
-             \textbf{Junoon '14}: & Eastern Band Competition, Antaragni '14.
-             \href{http://junoon.srijanshetty.in}{http://junoon.srijanshetty.in}\\
-            \textbf{Udghosh '13}: & The annual sports-fest of IIT Kanpur.
-             \href{http://udghosh.srijanshetty.in}{http://udghosh.srijanshetty.in}\\
-         \end{tabular}
+      \begin{itemize}[leftmargin=0.5cm]
+          \item Explored and documented the various facets of \textbf{GNU/Linux} like the file system,
+              process management, memory management, shell interface etc to serve as a reference for the
+              Student Community.
+      \end{itemize}
     }
 
-\projectlist
-    {Projects on Github}
-    {
-        \begin{tabular}{p{2cm}p{0.67\linewidth}}
-             \textbf{udacity-dl}: & download course contents of any public udacity course.
-             \href{https://github.com/navya/udacity-dl} {https://github.com/navya/udacity-dl}\\
-             \textbf{Bash Scripts}: & handy configurations and shortcuts for ZSH
-             \href{https://github.com/srijanshetty/custom} {https://github.com/srijanshetty/custom}\\
-         \end{tabular}
-    }
+% \projectlist
+%     {Applications}
+%     {
+%         \begin{tabular}{p{2cm}p{0.67\linewidth}}
+%             \textbf{ShuffleRun}:
+%             & Pitched ShuffleRun, a \textbf{music player} which selects tracks on the basis of the user's
+%             running speed; recieved honourable mention at \textbf{Yahoo! HackU 2013}.
+%             \href{https://github.com/srijanshetty/ShuffleRun} {https://github.com/srijanshetty/ShuffleRun]}\\
+%
+%             \textbf{GYPH}:
+%             & Eased the process of creating minimalistic websites for not-so-tech-savvy students
+%             by creating a WYSIWG website \textbf{editor.} \href{http://gyph2.herokuapp.com/template1}
+%             {http://gyph2.herokuapp.com/template1}\\
+%
+%             \textbf{OARS}:
+%             & \textbf{Scraped} the institute \textbf{academic records} to create a database of all courses offered by the
+%             institute to create an AngularJS based \textbf{course search} over the existing legacy course search.
+%             {\href{https://navya.github.io/oars}{\small{[https://navya.github.io/oars]}}}
+%          \end{tabular}
+%      }
+%
+% \projectlist
+%     {Web Development}
+%     {
+%         \begin{tabular}{p{2cm}p{0.67\linewidth}}
+%              \textbf{Antaragni '14}: & The annual cultural festival of IIT Kanpur.
+%              \href{http://antaragni.srijanshetty.in} {http://antaragni.srijanshetty.in}\\
+%              \textbf{Junoon '14}: & Eastern Band Competition, Antaragni '14.
+%              \href{http://junoon.srijanshetty.in}{http://junoon.srijanshetty.in}\\
+%             \textbf{Udghosh '13}: & The annual sports-fest of IIT Kanpur.
+%              \href{http://udghosh.srijanshetty.in}{http://udghosh.srijanshetty.in}\\
+%          \end{tabular}
+%     }
+%
+% \projectlist
+%     {Projects on Github}
+%     {
+%         \begin{tabular}{p{2cm}p{0.67\linewidth}}
+%              \textbf{udacity-dl}: & download course contents of any public udacity course.
+%              \href{https://github.com/navya/udacity-dl} {https://github.com/navya/udacity-dl}\\
+%              \textbf{Bash Scripts}: & handy configurations and shortcuts for ZSH
+%              \href{https://github.com/srijanshetty/custom} {https://github.com/srijanshetty/custom}\\
+%          \end{tabular}
+%     }
 
 %----------------------------------------------------------------------------------------
 %   SCHOLASTIC ACHIEVEMENTS
