--- a/cv.tex
+++ b/cv.tex
@@ -227,10 +227,12 @@
     {\href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {[Wiki]} }
     {
       \begin{itemize}[leftmargin=0.5cm]
-          \item One of the \textbf{eleven} teams to be selected as a part of Mozilla's Winter of Security Initiative 2014.
-          \item The objective of the project is to implement true \textbf{arbitrary multi-factor authentication} support in
+          \item One of the \textbf{eleven} teams all over the \textbf{world} to be selected as a part of Mozilla's Winter of Security Initiative 2014.
+          \item The objective of the project was to implement true \textbf{arbitrary multi-factor authentication} support in
               \textbf{OpenVPN}; and to implement \textbf{session-support} for the additional factors.
-              \href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {[https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA]}
+          \item The project presentation is archived at
+              \href{https://air.mozilla.org/mwos-2014-openvpn-mfa/}{https://air.mozilla.org/mwos-2014-openvpn-mfa/}.
+          \item The wiki for the project is located at \href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA}
       \end{itemize}
     }
 
