--- a/cv.tex
+++ b/cv.tex
@@ -136,17 +136,17 @@
 
 {
     \begin{tabular}{rp{6cm}l}
-        \multirow{3}{0.45\linewidth}{
+        \multirow{3}{0.70\linewidth}{
+            \vfil
             {
                 \addfontfeature{LetterSpace=20.0}\fontsize{20}{20}\selectfont\scshape
                 Srijan R. Shetty
             }\\
-            \hspace{0.15cm} \emph{Department of Computer Science and Engineering}
+            \emph{Senior Undergraduate, Dept. of Computer Science and Engineering}
         }
 
-        & {\Large\Letter} {\href{mailto:srijan.shetty@gmail.com}{srijan.shetty@gmail.com}}
-        & {\Large\Mobilefone} {+(91) 9005900383}\\
-        & {\github} {\href{https://github.com/srijanshetty}{https://github.com/srijanshetty}}
+        & {\Large\Letter} {\href{mailto:srijan.shetty@gmail.com}{srijan.shetty@gmail.com}}\\
+        & {\github} {\href{https://github.com/srijanshetty}{@srijanshetty}}\\
         & {\Large\Mundus} {\href{https://srijanshetty.in}{https://srijanshetty.in}}\\
     \end{tabular}
     \vspace{-0.5cm}
