--- a/cv.tex
+++ b/cv.tex
@@ -63,6 +63,7 @@
 %----------------------------------------------------------------------------------------
 \newcommand{\verticalspacing}{-0.25cm}
 \newcommand{\headspace}{-0.3cm}
+\newcommand{\bulletspace}{0.7cm}
 
 \newcommand{\highlight}[2]{
     \begin{tabular}{p{2.4cm}|l}
@@ -226,7 +227,7 @@
     {\textsc{\raggedright Mozilla Winter of Security}, Guillaume Destuynder, Professor Dheeraj Sanghi}
     {\href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {[Wiki]} }
     {
-      \begin{itemize}[leftmargin=0.5cm]
+        \begin{itemize}[leftmargin=\bulletspace{}]
           \item One of the \textbf{eleven} teams all over the \textbf{world} to be selected as a part of Mozilla's Winter of Security Initiative 2014.
           \item The objective of the project was to implement true \textbf{arbitrary multi-factor authentication} support in
               \textbf{OpenVPN}; and to implement \textbf{session-support} for the additional factors.
@@ -243,16 +244,16 @@
       {\textsc{Microsoft Research India}, Bangalore}
       {}
       {
-         \begin{itemize}[leftmargin=0.5cm]
-             \item Analysed the implementations of different distributed systems and databases architectures like
-                 \textbf{Google MapReduce}, \textbf{Google FileSystem}, \textbf{Google MillWheel} \textbf{Yahoo! PNUTS},
-                 \textbf{Amazon DynamoDB}, \textbf{Apache Hadoop}, \textbf{Apache Storm}, \textbf{Microsoft Dryad},
-                 and \textbf{Microsoft DryadLINQ} to understand the design decisions involved.
-             \item Used \textbf{TPL Dataflow} and \textbf{Lightweight Tasks} to implement concurrent pipeline
-                 processing of messages in CScale to preserve processing ord
-                 er of partially ordered messages.
-                 Performed \textbf{performance testing}, \textbf{failure testing} of the existing infrastructure.
-         \end{itemize}
+          \begin{itemize}[leftmargin=\bulletspace{}]
+              \item Analysed the implementations of different distributed systems and databases architectures like
+                  \textbf{Google MapReduce}, \textbf{Google FileSystem}, \textbf{Google MillWheel} \textbf{Yahoo! PNUTS},
+                  \textbf{Amazon DynamoDB}, \textbf{Apache Hadoop}, \textbf{Apache Storm}, \textbf{Microsoft Dryad},
+                  and \textbf{Microsoft DryadLINQ} to understand the design decisions involved.
+              \item Used \textbf{TPL Dataflow} and \textbf{Lightweight Tasks} to implement concurrent pipeline
+                  processing of messages in CScale to preserve processing ord
+                  er of partially ordered messages.
+                  Performed \textbf{performance testing}, \textbf{failure testing} of the existing infrastructure.
+          \end{itemize}
      }
 
 \cproject
@@ -261,7 +262,7 @@
     {\textsc{Aurus Networks'}, Bangalore}
     {}
     {
-        \begin{itemize}[leftmargin=0.5cm]
+        \begin{itemize}[leftmargin=\bulletspace{}]
             \item Ported the legacy flash based web player in \textbf{CourseHub} --- Aurus Networks'
                 MOOC offering --- to a technology agnostic \textbf{HTML5/JavaScript} web player leading
                 to a uniform cross-platform viewing experience.
@@ -284,10 +285,10 @@
     {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
     { \href{https://github.com/srijanshetty/javascript-compiler} {[GitHub]} }
     {
-        \begin{itemize}[leftmargin=0.5cm]
-          \item Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
-          functions, anonymous functions, static types, type annotations, recursion and nested functions.
-          \href{https://github.com/srijanshetty/javascript-compiler} {[https://github.com/srijanshetty/javascript-compiler]}
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
+                functions, anonymous functions, static types, type annotations, recursion and nested functions.
+                \href{https://github.com/srijanshetty/javascript-compiler} {[https://github.com/srijanshetty/javascript-compiler]}
         \end{itemize}
     }
 
@@ -297,20 +298,20 @@
     {\textsc{\raggedright Artificial Intelligence}, Professor Amitabha Mukherjee}
     { \href{https://github.com/srijanshetty/author-attribution} {[GitHub]} }
     {
-     \begin{itemize}[leftmargin=0.5cm]
-         \item Presented a poster on Opinion Word Expansion and Target Extraction through Double Propogation, Guang Qin,
-             Bing Liu, Jiajun Bu, Chun Chen that was nominated as the best poster by all students.
-         \item Generated a Hindi literature corpus consisting of works by Tagore,
-             Vibhuti Narayan, Premchand, Sarat Chattopadhyay and Dhamarvir Bharati.
-         \item Clustered a sample set of multiple Hindi authors using K-means unsupervised clustering to achieve
-             F-scores in the range of 90-97\% for each author.
-         \item Classified each author using Support Vector Machine using Radial Basis Kernel function
-             and achieved an F-score of 90--95\% for each author.
-         \item Performed Multiple Discriminant Analysis on the data for a quantitative comparison with word
-             collocations; there was no appreciable difference in the results with the F-scores increasing only
-             marginally.
-          \href{https://github.com/srijanshetty/author-attribution} {[https://github.com/srijanshetty/author-attribution]}
-     \end{itemize}
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Presented a poster on Opinion Word Expansion and Target Extraction through Double Propogation, Guang Qin,
+                Bing Liu, Jiajun Bu, Chun Chen that was nominated as the best poster by all students.
+            \item Generated a Hindi literature corpus consisting of works by Tagore,
+                Vibhuti Narayan, Premchand, Sarat Chattopadhyay and Dhamarvir Bharati.
+            \item Clustered a sample set of multiple Hindi authors using K-means unsupervised clustering to achieve
+                F-scores in the range of 90-97\% for each author.
+            \item Classified each author using Support Vector Machine using Radial Basis Kernel function
+                and achieved an F-score of 90--95\% for each author.
+            \item Performed Multiple Discriminant Analysis on the data for a quantitative comparison with word
+                collocations; there was no appreciable difference in the results with the F-scores increasing only
+                marginally.
+                \href{https://github.com/srijanshetty/author-attribution} {[https://github.com/srijanshetty/author-attribution]}
+        \end{itemize}
     }
 
 \cproject
@@ -319,17 +320,17 @@
     {\textsc{Operating Systems}, Professor Mainak Chaudhari}
     {\href{https://github.com/srijanshetty/} {[GitHub]} }
     {
-     \begin{itemize}[leftmargin=0.5cm]
-         \item Extended the standard system call library of NachOS and implemented system calls pertaining to Fork, Exec,
-             Join, Yield, Sleep and Exit.
-             \href{https://github.com/srijanshetty/nachos-syscalls/}{[https://github.com/srijanshetty/nachos-syscalls]}
-         \item Implemented process scheduling algorithms: UNIX Scheduling, First in First Out,
-             Round Robin, Shortest Job First and Non-pre-emptive job scheduling to assess their relative performances.
-             \href{https://github.com/srijanshetty/nachos-scheduling}{[https://github.com/srijanshetty/nachos-scheduling]}
-         \item Programmed page replacement algorithms: Random Page Allocation, First in First Out,
-             Least Recently Used(LRU) and LRU Clock to evaluate relative performances under difference scenarios.
-             \href{https://github.com/srijanshetty/nachos-final}{[https://github.com/srijanshetty/nachos-final]}
-      \end{itemize}
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Extended the standard system call library of NachOS and implemented system calls pertaining to Fork, Exec,
+                Join, Yield, Sleep and Exit.
+                \href{https://github.com/srijanshetty/nachos-syscalls/}{[https://github.com/srijanshetty/nachos-syscalls]}
+            \item Implemented process scheduling algorithms: UNIX Scheduling, First in First Out,
+                Round Robin, Shortest Job First and Non-pre-emptive job scheduling to assess their relative performances.
+                \href{https://github.com/srijanshetty/nachos-scheduling}{[https://github.com/srijanshetty/nachos-scheduling]}
+            \item Programmed page replacement algorithms: Random Page Allocation, First in First Out,
+                Least Recently Used(LRU) and LRU Clock to evaluate relative performances under difference scenarios.
+                \href{https://github.com/srijanshetty/nachos-final}{[https://github.com/srijanshetty/nachos-final]}
+        \end{itemize}
     }
 
 \cproject
@@ -338,7 +339,7 @@
     {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
     { \href{https://github.com/srijanshetty/nodesock} {[GitHub]} }
     {
-        \begin{itemize}[leftmargin=0.5cm]
+        \begin{itemize}[leftmargin=\bulletspace{}]
             \item Conceived and implemented a peer-to-peer protocol for file and media transfer in Node.js to share
                 data over any LAN.  \href{https://github.com/srijanshetty/nodesock} {[https://github.com/srijanshetty/nodesock]}
             \item Generated raw IP packets with spoofed IP addresses to exploit test machines with ARP Poisoning,
@@ -352,10 +353,10 @@
     {\textsc{Principles of Programming Languages}, Professor Piyush Kurur}
     {}
     {
-       \begin{itemize}[leftmargin=0.5cm]
-           \item Implemented shortest path algorithm in Prolog using Logic Programming on the Delhi Metro route.
-           \item Implemented a simple traffic server in Erlang using message passing concurrency and tail call recursion.
-       \end{itemize}
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Implemented shortest path algorithm in Prolog using Logic Programming on the Delhi Metro route.
+            \item Implemented a simple traffic server in Erlang using message passing concurrency and tail call recursion.
+        \end{itemize}
     }
 
 
@@ -365,12 +366,12 @@
     {\textsc{Computer Organization}, Professor Subhajit Roy}
     { \href{https://github.com/srijanshetty/220\_y11} {[GitHub]} }
     {
-      \begin{itemize}[leftmargin=0.5cm]
-          \item Designed and programmed a simple \textbf{Instruction set Architecture (ISA)} for a 8-bit General
-              Purpose Computer with a \textbf{load-store}
-              architecture on \textbf{Xilinx Spartan 3 FPGA} using System Verilog.  Demonstrated recursion, looping
-              and conditionals on the Computer by using a simple assembly language.
-      \end{itemize}
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Designed and programmed a simple \textbf{Instruction set Architecture (ISA)} for a 8-bit General
+                Purpose Computer with a \textbf{load-store}
+                architecture on \textbf{Xilinx Spartan 3 FPGA} using System Verilog.  Demonstrated recursion, looping
+                and conditionals on the Computer by using a simple assembly language.
+        \end{itemize}
     }
 
 \cproject
@@ -379,11 +380,11 @@
     {\textsc{Computing Laboratory}}
     {\href{https://github.com/srijanshetty/crawler} { [GitHub] } }
     {
-      \begin{itemize}[leftmargin=0.5cm]
-          \item Developed a \textbf{python based web crawler} to crawl paper submission deadlines for a given paper
-              using BeautifulSoup and urllib.
-              \href{https://github.com/srijanshetty/crawler} { [https://github.com/srijanshetty/crawler] }
-      \end{itemize}
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Developed a \textbf{python based web crawler} to crawl paper submission deadlines for a given paper
+                using BeautifulSoup and urllib.
+                \href{https://github.com/srijanshetty/crawler} { [https://github.com/srijanshetty/crawler] }
+        \end{itemize}
     }
 
 %----------------------------------------------------------------------------------------
@@ -397,12 +398,13 @@
     {Programming Club, IIT Kanpur}
     {\href{http://bit.ly/pclubLinux}{\small{[http://bit.ly/pclubLinux]}}}
     {
-      \begin{itemize}[leftmargin=0.5cm]
-          \item Explored and documented the various facets of \textbf{GNU/Linux} like the file system,
-              process management, memory management, shell interface etc to serve as a reference for the
-              Student Community.
-      \end{itemize}
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Explored and documented the various facets of \textbf{GNU/Linux} like the file system,
+                process management, memory management, shell interface etc to serve as a reference for the
+                Student Community.
+        \end{itemize}
     }
+
 
 % \projectlist
 %     {Applications}
@@ -483,7 +485,7 @@
     {\href{https://github.com/navya} {\small{[https://github.com/navya]}}}
     {Hacker, Navya, FOSS Group IIT Kanpur}
     {
-        \begin{itemize}[leftmargin=0.5cm]
+        \begin{itemize}[leftmargin=\bulletspace{}]
             \item Promoted the \textbf{FOSS initiative} in campus by organizing \textbf{student lectures} and meet-ups.
             \item Built student-centric applications like \textbf{Course Search and Student Search}, to circumvent
                 their legacy institute counterparts.
@@ -491,22 +493,10 @@
     }
 
 \gitproject
-    {\href{https://github.com/srijanshetty/elections} {\small{[https://github.com/elections]}}}
-    {Head Logistics, Election Council, IIT Kanpur}
-    {
-        \begin{itemize}[leftmargin=0.5cm]
-            \item Designed and created a new electronic voting system in consultation with the \textbf{Students' Senate}
-                to facilitate smooth voting in General Elections 2015.
-            \item Ensured full transparency in handling the finances of Election Council, IIT Kanpur and devised new methods
-                to reduce the overall expenditure of the Council by $25\%$.
-        \end{itemize}
-    }
-
-\gitproject
     {2014}
     {Head, Major Events and Competitions, Antaragni '14}
     {
-        \begin{itemize}[leftmargin=0.5cm]
+        \begin{itemize}[leftmargin=\bulletspace{}]
             \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national
                 prelims for Nukkad, Dance, Quiz and Synchronicity were held in Pune, Mumbai, Chennai,
                 Bangalore, Chandigarh, Bhopal, Lucknow, Kolkata, and Kanpur.
@@ -526,7 +516,7 @@
     {2013 -- 2014}
     {Hospitality Coordinator, Antaragni '13}
     {
-        \begin{itemize}[leftmargin=0.5cm]
+        \begin{itemize}[leftmargin=\bulletspace{}]
             \item Managed a team of \textbf{40 secretaries and 80 volunteers}, over a span of 8 months and ensured a
                 flawless conduction of the festival.
             \item Chalked out the logistics of \textbf{hospitality and accommodation} of \textbf{1500 participants}
@@ -557,7 +547,7 @@
     {2014 -- 2015}
     {Member, Institute Anti Ragging Committee}
     {
-        \begin{itemize}[leftmargin=0.5cm]
+        \begin{itemize}[leftmargin=\bulletspace{}]
             \item Appointed as a member of the Institute Anti Ragging Committee, \textbf{a 10 member committee} responsible
                 for welfare of the newly admitted freshmen.
             \item Worked in tandem with the office of the Dean of Student Affairs, to organize sessions
@@ -572,10 +562,10 @@
     {Professor Bhaskar Das Gupta}
     {}
     {
-       \begin{itemize}[leftmargin=0.5cm]
-           \item Worked as a \textbf{English tutor} in the pilot English Proficiency Programme to help
-               \textbf{under-privileged students} obtain a functional knowlege of English.
-       \end{itemize}
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Worked as a \textbf{English tutor} in the pilot English Proficiency Programme to help
+                \textbf{under-privileged students} obtain a functional knowlege of English.
+        \end{itemize}
     }
 
 \skill
