VS - 3, Electronic Voting

--- a/cv.tex
+++ b/cv.tex
@@ -203,7 +203,7 @@
 
     \textsc{Current} & B. Tech, \textsc{Computer Science and Engineering},
     \textbf{Indian Institute of Technology}, Kanpur
-    & \textbf{9.5/10.0}\\
+    & \textbf{9.6/10.0}\\
 
     \textsc{July 2011} & 12$^{th}$ Board, \textsc{CBSE} Board,
     \textbf{The Emerald Heights International School}, Indore
@@ -405,6 +405,19 @@
         \end{itemize}
     }
 
+\cproject
+    {Winter 2014-2015}
+    {VS-3, Electronic Voting}
+    {Election Council, IIT Kanpur}
+    {\href{https://github.com/srijanshetty/elections} {\small{[https://github.com/elections]}}}
+    {
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Designed and created a new electronic voting system in consultation with the \textbf{Students' Senate}
+                to facilitate smooth electonic voting in the campus.
+            \item The voting system was subsequently used in Students'
+                Gymkhana General Elections, Hall 8 HEC Elections, Hall 2 HEC Elections and Hall 4 HEC Elections.
+        \end{itemize}
+    }
 
 % \projectlist
 %     {Applications}
