Add R to languages

--- a/cv.tex
+++ b/cv.tex
@@ -169,10 +169,10 @@
         \itemlist {
                 \textsc{\small Languages} %
                 & \textbf{JavaScript} (Expert), \textbf{Python} (Proficient), \textbf{C++} (Proficient),
-                  \textbf{C} (Proficient)\\
+                \textbf{C} (Proficient), \textbf{R} (Intermediate)\\
                 \textsc{\small Web Dev} %
                 & \textbf{HTML5}, \textbf{CSS}, \textbf{SQL and NoSQL}, \textbf{AngularJS}, \textbf{Nodejs}\\
-                  \textsc{\small Tools} %
+                \textsc{\small Tools} %
                 & \textbf{Git} (Expert), \textbf{Shell Scripting} (Proficient), \textbf{Vim} (Expert),
                 \textbf{LaTeX} (Proficient)\\
             }
