--- a/cv.tex
+++ b/cv.tex
@@ -347,18 +347,17 @@
         \end{itemize}
     }
 
-\cproject
-    {Monsoon 2013-2014}
-    {Prolog Shortest Paths and Erlang Traffic Server}
-    {\textsc{Principles of Programming Languages}, Professor Piyush Kurur}
-    {}
-    {
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Implemented shortest path algorithm in Prolog using Logic Programming on the Delhi Metro route.
-            \item Implemented a simple traffic server in Erlang using message passing concurrency and tail call recursion.
-        \end{itemize}
-    }
-
+% \cproject
+%     {Monsoon 2013-2014}
+%     {Prolog Shortest Paths and Erlang Traffic Server}
+%     {\textsc{Principles of Programming Languages}, Professor Piyush Kurur}
+%     {}
+%     {
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Implemented shortest path algorithm in Prolog using Logic Programming on the Delhi Metro route.
+%             \item Implemented a simple traffic server in Erlang using message passing concurrency and tail call recursion.
+%         \end{itemize}
+%     }
 
 \cproject
     {Winter 2012-2013}
@@ -374,18 +373,18 @@
         \end{itemize}
     }
 
-\cproject
-    {Winter 2012-2013}
-    {Conference Dates Web Crawler}
-    {\textsc{Computing Laboratory}}
-    {\href{https://github.com/srijanshetty/crawler} { [GitHub] } }
-    {
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Developed a \textbf{python based web crawler} to crawl paper submission deadlines for a given paper
-                using BeautifulSoup and urllib.
-                \href{https://github.com/srijanshetty/crawler} { [https://github.com/srijanshetty/crawler] }
-        \end{itemize}
-    }
+% \cproject
+%     {Winter 2012-2013}
+%     {Conference Dates Web Crawler}
+%     {\textsc{Computing Laboratory}}
+%     {\href{https://github.com/srijanshetty/crawler} { [GitHub] } }
+%     {
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Developed a \textbf{python based web crawler} to crawl paper submission deadlines for a given paper
+%                 using BeautifulSoup and urllib.
+%                 \href{https://github.com/srijanshetty/crawler} { [https://github.com/srijanshetty/crawler] }
+%         \end{itemize}
+%     }
 
 %----------------------------------------------------------------------------------------
 %  INDEPENDENT PROJECTS
@@ -396,7 +395,7 @@
     {Summer 2012-2013}
     {GNU/Linux Exploration}
     {Programming Club, IIT Kanpur}
-    {\href{http://bit.ly/pclubLinux}{\small{[http://bit.ly/pclubLinux]}}}
+    {\href{http://bit.ly/pclubLinux}{\small{[Wiki]}}}
     {
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Explored and documented the various facets of \textbf{GNU/Linux} like the file system,
@@ -409,7 +408,7 @@
     {Winter 2014-2015}
     {VS-3, Electronic Voting}
     {Election Council, IIT Kanpur}
-    {\href{https://github.com/srijanshetty/elections} {\small{[https://github.com/elections]}}}
+    {\href{https://github.com/srijanshetty/elections} {\small{[GitHub]}}}
     {
         \begin{itemize}[leftmargin=\bulletspace{}]
             \item Designed and created a new electronic voting system in consultation with the \textbf{Students' Senate}
@@ -419,50 +418,35 @@
         \end{itemize}
     }
 
-% \projectlist
-%     {Applications}
-%     {
-%         \begin{tabular}{p{2cm}p{0.67\linewidth}}
-%             \textbf{ShuffleRun}:
-%             & Pitched ShuffleRun, a \textbf{music player} which selects tracks on the basis of the user's
-%             running speed; recieved honourable mention at \textbf{Yahoo! HackU 2013}.
-%             \href{https://github.com/srijanshetty/ShuffleRun} {https://github.com/srijanshetty/ShuffleRun]}\\
-%
-%             \textbf{GYPH}:
-%             & Eased the process of creating minimalistic websites for not-so-tech-savvy students
-%             by creating a WYSIWG website \textbf{editor.} \href{http://gyph2.herokuapp.com/template1}
-%             {http://gyph2.herokuapp.com/template1}\\
-%
-%             \textbf{OARS}:
-%             & \textbf{Scraped} the institute \textbf{academic records} to create a database of all courses offered by the
-%             institute to create an AngularJS based \textbf{course search} over the existing legacy course search.
-%             {\href{https://navya.github.io/oars}{\small{[https://navya.github.io/oars]}}}
-%          \end{tabular}
-%      }
-%
-% \projectlist
-%     {Web Development}
-%     {
-%         \begin{tabular}{p{2cm}p{0.67\linewidth}}
-%              \textbf{Antaragni '14}: & The annual cultural festival of IIT Kanpur.
-%              \href{http://antaragni.srijanshetty.in} {http://antaragni.srijanshetty.in}\\
-%              \textbf{Junoon '14}: & Eastern Band Competition, Antaragni '14.
-%              \href{http://junoon.srijanshetty.in}{http://junoon.srijanshetty.in}\\
-%             \textbf{Udghosh '13}: & The annual sports-fest of IIT Kanpur.
-%              \href{http://udghosh.srijanshetty.in}{http://udghosh.srijanshetty.in}\\
-%          \end{tabular}
-%     }
-%
-% \projectlist
-%     {Projects on Github}
-%     {
-%         \begin{tabular}{p{2cm}p{0.67\linewidth}}
-%              \textbf{udacity-dl}: & download course contents of any public udacity course.
-%              \href{https://github.com/navya/udacity-dl} {https://github.com/navya/udacity-dl}\\
-%              \textbf{Bash Scripts}: & handy configurations and shortcuts for ZSH
-%              \href{https://github.com/srijanshetty/custom} {https://github.com/srijanshetty/custom}\\
-%          \end{tabular}
-%     }
+\gitproject
+    {\href{https://navya.github.io/oars} {\small{[Site]}}}
+    {OARS}
+    {
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item \textbf{Scraped} the institute \textbf{academic records} to create a database of all courses offered by the
+                institute to create an AngularJS based \textbf{course search} over the existing legacy course search.
+        \end{itemize}
+    }
+
+\gitproject
+    {\href{http://gyph2.herokuapp.com/template1} {\small{[Site]}}}
+    {GYPH}
+    {
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item GYPH or Get Your Personal Homepage, eases the process of creating minimalistic websites for students
+            by providing a WYSIWYG website creator.\textbf{editor.}
+        \end{itemize}
+    }
+
+\gitproject
+    {\href{https://github.com/srijanshetty/ShuffleRun} {\small{[GitHub]}}}
+    {ShuffleRun}
+    {
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Pitched ShuffleRun, a \textbf{music player} which selects tracks on the basis of the user's
+                running speed; recieved honourable mention at \textbf{Yahoo! HackU 2013}.
+        \end{itemize}
+    }
 
 %----------------------------------------------------------------------------------------
 %   SCHOLASTIC ACHIEVEMENTS
@@ -495,7 +479,7 @@
        {Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com}}
 
 \gitproject
-    {\href{https://github.com/navya} {\small{[https://github.com/navya]}}}
+    {\href{https://github.com/navya} {\small{[Site]}}}
     {Hacker, Navya, FOSS Group IIT Kanpur}
     {
         \begin{itemize}[leftmargin=\bulletspace{}]
