--- a/cv.tex
+++ b/cv.tex
@@ -490,7 +490,18 @@
     }
 
 \gitproject
-    {2014}
+    {2014 - 2015}
+    {Chief Election Officer, Election Council, IIT Kanpur}
+    {
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Conducted General Elections, Student's Gymkhana 2014 and
+                Girls Representative Elections, Students' Gymkhana 2014.
+            \item Developed a new voting software from ground up to cater to the needs of IIT Kanpur.
+        \end{itemize}
+    }
+
+\gitproject
+    {2014 - 2015}
     {Head, Major Events and Competitions, Antaragni '14}
     {
         \begin{itemize}[leftmargin=\bulletspace{}]
